--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Mchaney & Associates - Certified Safety Professional, OSHA MedCert</title>
+    <meta name='description' content='Mchaney & Associates - Certified Safety Professional for Industrial Safety, OSHA MedCert Respirator certification tests, Expert Witness Litigation Support for OSHA and MSHA Health and Safety Issues' />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
